# gode

./: .gitmodules  CMakeLists.txt  README.md  README_ZH.md  build.ps1  check_deps.py
code_generator/builtin/: builtin_classes_generator.py
code_generator/class/: class_generator.py
code_generator/dts/: dts_generator.py
code_generator/templates/: builtin_binding.cpp.jinja2  class_binding.cpp.jinja2
example/: project.godot
example/addons/gode/: gode.gd  init.bat  init.sh
example/addons/gode/core/: globals.d.ts  godot.d.ts
example/scene/: test_runner.tscn
example/scenes/: control.tscn
example/script/: BaseClass.js  MyNode.js  NewScript.js  UnitTest.js
example/scripts/: Test.ts
include/register/utility_functions/: utility_functions.h  utility_functions_vararg_method.h
include/support/javascript/: javascript.h  javascript_instance.h
include/utils/: javascript_vm.h  node_runtime.h  value_convert.h
src/: register_types.cpp
src/register/utility_functions/: utility_functions.cpp
src/support/javascript/: javascript.cpp  javascript_callable.cpp  javascript_instance.cpp  javascript_instance_info.cpp  javascript_language.cpp  javascript_loader.cpp  javascript_saver.cpp
src/support/typescript/: typescript.cpp  typescript_language.cpp
src/tests/: test_runner.cpp
src/utils/: javascript_vm.cpp  node_runtime.cpp  value_convert.cpp
